Update skills and achievements in index.html

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <div class="skill-item">Interactive Web Content</div>
                     <div class="skill-item">File Handling</div>
                     <div class="skill-item">Data Processing</div>
-                    <div class="skill-item">HTML, CSS, JavaScript</div>
+                    <div class="skill-item">SQL</div>
                     <div class="skill-item">Streamlit</div>
                 </div>
 
@@ -435,54 +435,18 @@
                 <p style="margin-top: 5px;"><strong>Associated with:</strong> St. Teresa School</p>
             </div>
 
-            <div class="card">
-                <h4>📊 Scientific Data Analysis Tools</h4>
-                <p class="date">Python | Data Processing</p>
-                <p>Developing Python scripts for analyzing scientific datasets, implementing data visualization techniques, and automating data processing workflows. Focus on astronomical data and research applications.</p>
-                <ul>
-                    <li>Data parsing and cleaning for large datasets</li>
-                    <li>Statistical analysis and pattern recognition</li>
-                    <li>Visualization using matplotlib and scientific libraries</li>
-                </ul>
-                <a href="https://github.com/shatakshita" target="_blank" class="project-link">View on GitHub →</a>
-            </div>
-
-            <div class="card">
-                <h4>🧮 Physics Problem Solvers</h4>
-                <p class="date">Python | Computational Physics</p>
-                <p>Building computational tools to solve complex physics problems, simulate physical phenomena, and visualize mathematical concepts related to JEE preparation and beyond.</p>
-                <ul>
-                    <li>Numerical methods for solving differential equations</li>
-                    <li>Physics simulation and modeling</li>
-                    <li>Mathematical visualization tools</li>
-                </ul>
-                <a href="https://github.com/shatakshita" target="_blank" class="project-link">View on GitHub →</a>
-            </div>
-
-            <div class="card">
-                <h4>📝 freeCodeCamp Certification Projects</h4>
-                <p class="date">Python | Scientific Computing</p>
-                <p>Completing comprehensive projects as part of the Scientific Computing with Python certification, focusing on algorithm design, data structures, and computational problem-solving.</p>
-                <ul>
-                    <li>Arithmetic Formatter</li>
-                    <li>Time Calculator</li>
-                    <li>Budget App & Polygon Area Calculator</li>
-                    <li>Probability Calculator</li>
-                </ul>
-                <a href="https://github.com/shatakshita" target="_blank" class="project-link">View on GitHub →</a>
-            </div>
-
+           
             <div class="card">
                 <h3>🔧 Technical Proficiencies Demonstrated</h3>
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 10px; margin-top: 15px;">
                     <div style="background: rgba(167, 139, 250, 0.1); padding: 10px; border-radius: 8px;">
-                        <strong>Languages:</strong> Python, HTML, CSS, JavaScript
+                        <strong>Languages:</strong> Python, SQL
                     </div>
                     <div style="background: rgba(167, 139, 250, 0.1); padding: 10px; border-radius: 8px;">
-                        <strong>Libraries:</strong> NumPy, Pandas, Matplotlib, Streamlit
+                        <strong>Libraries:</strong> Streamlit
                     </div>
                     <div style="background: rgba(167, 139, 250, 0.1); padding: 10px; border-radius: 8px;">
-                        <strong>Tools:</strong> Git, VS Code, Jupyter
+                        <strong>Tools:</strong> Git, GitHub, VS Code, MySQL, Krita, Canva, Gimp, Notion
                     </div>
                     <div style="background: rgba(167, 139, 250, 0.1); padding: 10px; border-radius: 8px;">
                         <strong>Focus:</strong> Scientific Computing, Data Analysis
@@ -539,11 +503,11 @@
         <div id="achievements" class="content-section">
             <div class="card">
                 <h3>🏆 Awards & Recognition</h3>
-                <div class="achievement-badge">🥇 Gold Medal – Social Work</div>
-                <div class="achievement-badge">🥇 Gold Medal & Trophy – Logo Designing</div>
                 <div class="achievement-badge">🏅 Best Journalist Award – Gaurs MUN 2025</div>
+                <div class="achievement-badge">🥇 Gold Medal & Trophy – Logo Designing</div>
+                <div class="achievement-badge">🥇 Gold Medal – Social Work</div>
                 <div class="achievement-badge">🎖️ Social and Group Development</div>
-                <div class="achievement-badge">🇮🇳 Azadi Ka Amrit Mahotsav (Poetry)</div>
+            
             </div>
 
             <div class="card">
